Small styling bug in the footer on mobile
Social media icons were't getting left hand padding due to specificity in CSS

--- a/src/styles.css
+++ b/src/styles.css
@@ -218,7 +218,7 @@ button:hover {background: #FAD7C3;}
 @media screen and (max-width: 450px) {
 	footer {padding: 1em 0;}
 	
-	footer p, footer ul {display: block; padding: .8em 10%;}
+	footer p, footer ul.social {display: block; padding: .8em 10%;}
 	footer p {margin: 0;}
 	
 	div.centered {padding: 1vh 10vw 5vh;}
